Add unit tests
Refactor the code to make it easier to test, re-organize project structure, add some documentation